@@ -314,7 +314,8 @@ split in multiple lines<br><br>
     from a FS20 repeater. In fact we are not sure that they are repeater
     messages, we just ignore messages which were sent out by our device for the
     next 3 seconds (or configured otherwise by filtertimeout).
-
+    <br>
+    For GNU/Linux you may want to read our <a href="linux.html">hints for GNU/Linux</a> about <a href="linux.html#multipledevices">multiple USB devices</a>.
   </ul>
   <br>
 
